[#930] Pluggable build mechanism
